--- a/index.html
+++ b/index.html
@@ -18,12 +18,108 @@
       <li>Compagny</li>
       <li>Contact</li>
 
-      <a href=""><button></button></a>
-      <a href=""><button></button></a>
+      <a href=""><button>Sign up</button></a>
+      <a href=""><button>Login</button></a>
     </nav>
     <h1>A modern publishing platform</h1>
-    <p>Grow</p>
+    <p>Grow your audience and build your online brand</p>
+
+    <button>Start for free</button>
+    <button>Learn More</button>
+
   </header>
+
+  <section id="designed">
+
+    <div>
+      <h2 class="blue-title">Designed for the future</h2>
+    </div>
+
+    <div class="half-grid">
+      <div class="right-section">
+        <div class="picto"></div>
+      </div>
+      <div class="left-section">
+        <div class="text-title">
+          <h3>Introduction an extensible editor</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt velit sunt magni incidunt harum eos
+            corporis quibusdam, asperiores aspernatur molestias veniam ut iure repellendus tempore dolores veritatis
+            temporibus expedita!</p>
+        </div>
+        <div class="text-title">
+          <h3>Introduction an extensible editor</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt velit sunt magni incidunt harum eos
+            corporis quibusdam, asperiores aspernatur molestias veniam ut iure repellendus tempore dolores veritatis
+            temporibus expedita!</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section id="middle-section">
+    <div class="half-grid">
+      <div class="right-section">
+        <div class="text-title">
+          <h2 class="white-title">State of the Art Infrastructure</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptate dolore voluptatum facere dolor
+            dignissimos aut nostrum quisquam recusandae, nobis quia impedit dolores cumque consequuntur, minima,
+            asperiores veritatis. Quis, expedita.</p>
+
+        </div>
+      </div>
+      <div class="picto"></div>
+    </div>
+  </section>
+
+  <section>
+    <div class="half-grid">
+      <div class="left-section">
+        <div class="picto"></div>
+      </div>
+      <div class="right-section">
+        <div class="text-title">
+          <h3>Free, open, simple</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt velit sunt magni incidunt harum eos
+            corporis quibusdam, asperiores aspernatur molestias veniam ut iure repellendus tempore dolores veritatis
+            temporibus expedita!</p>
+        </div>
+        <div class="text-title">
+          <h3>Powerful tooling</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt velit sunt magni incidunt harum eos
+            corporis quibusdam, asperiores aspernatur molestias veniam ut iure repellendus tempore dolores veritatis
+            temporibus expedita!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="logo-footer"></div>
+
+    <div class="">
+      <a href="#">Product</a>
+      <li>Overview</li>
+      <li>Pricing</li>
+      <li>Marketplace</li>
+      <li>Features</li>
+      <li>Integration</li>
+
+      <a href="">Compagny</a>
+      <li>About</li>
+      <li>Team</Tem>
+      </li>
+      <li>Blog</li>
+      <li>Careers</li>
+
+      <a href="">Connect</a>
+      <li>Contact</li>
+      <li>Newsletter</li>
+      <li>Linkedin</li>
+    </div>
+
+
+  </footer>
 
 </body>
 
